# Saaghar2

./: .gitignore  CMakeLists.txt
pQjWidgets/: CMakeLists.txt  QExtendedSplashScreen.pri  QMultiSelectWidget.pri  QSearchLineEdit.pri  QTextBrowserDialog.pri  pQjWidgets.pri
pQjWidgets/QExtendedSplashScreen/: qextendedsplashscreen.cpp  qextendedsplashscreen.h
pQjWidgets/QMultiSelectWidget/: qmultiselectwidget.cpp  qmultiselectwidget.h
pQjWidgets/QSearchLineEdit/: qsearchlineedit.cpp  qsearchlineedit.h
pQjWidgets/QTextBrowserDialog/: QTextBrowserDialog  qtextbrowserdialog.cpp  qtextbrowserdialog.h
src/: CMakeLists.txt  main.cpp
